src/asteroids/part3/programs/internal/generated/AsteroidsProgramParser.java
// Generated from AsteroidsProgram.g4 by ANTLR 4.7

    package asteroids.part3.programs.internal.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AsteroidsProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, NULL=2, SELF=3, SHIP=4, ASTEROID=5, PLANETOID=6, BULLET=7, PLANET=8, 
		ANY=9, GETRADIUS=10, GETX=11, GETY=12, GETVX=13, GETVY=14, GETDIR=15, 
		SQRT=16, NOT=17, THRUSTON=18, THRUSTOFF=19, TURN=20, FIRE=21, SKIP_ACTION=22, 
		DEF=23, IF=24, THEN=25, ELSE=26, WHILE=27, BREAK=28, RETURN=29, PRINT=30, 
		NOTHING=31, ASSIGN=32, MUL=33, ADD=34, SUB=35, EQ=36, LT=37, NUMBER=38, 
		FLOAT=39, INTEGER=40, IDENTIFIER=41, PARAM=42, COMMA=43, DOLLAR=44, LEFT_PAREN=45, 
		RIGHT_PAREN=46, LEFT_BRACE=47, RIGHT_BRACE=48, WHITESPACE=49, SINGLE_COMMENT=50;
	public static final int
		RULE_program = 0, RULE_functiondef = 1, RULE_statement = 2, RULE_assignmentStatement = 3, 
		RULE_whileStatement = 4, RULE_breakStatement = 5, RULE_returnStatement = 6, 
		RULE_ifStatement = 7, RULE_printStatement = 8, RULE_statementSequence = 9, 
		RULE_actionStatement = 10, RULE_expression = 11, RULE_entity = 12, RULE_functionCall = 13;
	public static final String[] ruleNames = {
		"program", "functiondef", "statement", "assignmentStatement", "whileStatement", 
		"breakStatement", "returnStatement", "ifStatement", "printStatement", 
		"statementSequence", "actionStatement", "expression", "entity", "functionCall"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'null'", "'self'", "'ship'", "'asteroid'", "'planetoid'", 
		"'bullet'", "'planet'", "'any'", "'getradius'", "'getx'", "'gety'", "'getvx'", 
		"'getvy'", "'getdir'", "'sqrt'", "'!'", "'thrust'", "'thrust_off'", "'turn'", 
		"'fire'", "'skip'", "'def'", "'if'", "'then'", "'else'", "'while'", "'break'", 
		"'return'", "'print'", "'nothing'", "':='", "'*'", "'+'", "'-'", "'=='", 
		"'<'", null, null, null, null, null, "','", "'$'", "'('", "')'", "'{'", 
		"'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "NULL", "SELF", "SHIP", "ASTEROID", "PLANETOID", "BULLET", 
		"PLANET", "ANY", "GETRADIUS", "GETX", "GETY", "GETVX", "GETVY", "GETDIR", 
		"SQRT", "NOT", "THRUSTON", "THRUSTOFF", "TURN", "FIRE", "SKIP_ACTION", 
		"DEF", "IF", "THEN", "ELSE", "WHILE", "BREAK", "RETURN", "PRINT", "NOTHING", 
		"ASSIGN", "MUL", "ADD", "SUB", "EQ", "LT", "NUMBER", "FLOAT", "INTEGER", 
		"IDENTIFIER", "PARAM", "COMMA", "DOLLAR", "LEFT_PAREN", "RIGHT_PAREN", 
		"LEFT_BRACE", "RIGHT_BRACE", "WHITESPACE", "SINGLE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AsteroidsProgram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AsteroidsProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public FunctiondefContext functiondef;
		public List<FunctiondefContext> funcdef = new ArrayList<FunctiondefContext>();
		public StatementSequenceContext programBody;
		public StatementSequenceContext statementSequence() {
			return getRuleContext(StatementSequenceContext.class,0);
		}
		public List<FunctiondefContext> functiondef() {
			return getRuleContexts(FunctiondefContext.class);
		}
		public FunctiondefContext functiondef(int i) {
			return getRuleContext(FunctiondefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEF) {
				{
				{
				setState(28);
				((ProgramContext)_localctx).functiondef = functiondef();
				((ProgramContext)_localctx).funcdef.add(((ProgramContext)_localctx).functiondef);
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			((ProgramContext)_localctx).programBody = statementSequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctiondefContext extends ParserRuleContext {
		public Token funcname;
		public StatementSequenceContext body;
		public TerminalNode DEF() { return getToken(AsteroidsProgramParser.DEF, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AsteroidsProgramParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(AsteroidsProgramParser.RIGHT_BRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsProgramParser.IDENTIFIER, 0); }
		public StatementSequenceContext statementSequence() {
			return getRuleContext(StatementSequenceContext.class,0);
		}
		public FunctiondefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterFunctiondef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitFunctiondef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitFunctiondef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctiondefContext functiondef() throws RecognitionException {
		FunctiondefContext _localctx = new FunctiondefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functiondef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(DEF);
			setState(37);
			((FunctiondefContext)_localctx).funcname = match(IDENTIFIER);
			setState(38);
			match(LEFT_BRACE);
			setState(39);
			((FunctiondefContext)_localctx).body = statementSequence();
			setState(40);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public ActionStatementContext actionStatement() {
			return getRuleContext(ActionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				assignmentStatement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				whileStatement();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				breakStatement();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				returnStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				ifStatement();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				printStatement();
				}
				break;
			case THRUSTON:
			case THRUSTOFF:
			case TURN:
			case FIRE:
			case SKIP_ACTION:
				enterOuterAlt(_localctx, 7);
				{
				setState(48);
				actionStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentStatementContext extends ParserRuleContext {
		public Token variableName;
		public ExpressionContext value;
		public TerminalNode ASSIGN() { return getToken(AsteroidsProgramParser.ASSIGN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsProgramParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitAssignmentStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitAssignmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentStatementContext assignmentStatement() throws RecognitionException {
		AssignmentStatementContext _localctx = new AssignmentStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignmentStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			((AssignmentStatementContext)_localctx).variableName = match(IDENTIFIER);
			setState(52);
			match(ASSIGN);
			setState(53);
			((AssignmentStatementContext)_localctx).value = expression(0);
			setState(54);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementContext extends ParserRuleContext {
		public ExpressionContext condition;
		public StatementSequenceContext body;
		public TerminalNode WHILE() { return getToken(AsteroidsProgramParser.WHILE, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AsteroidsProgramParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(AsteroidsProgramParser.RIGHT_BRACE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementSequenceContext statementSequence() {
			return getRuleContext(StatementSequenceContext.class,0);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterWhileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitWhileStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitWhileStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whileStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(WHILE);
			setState(57);
			((WhileStatementContext)_localctx).condition = expression(0);
			setState(58);
			match(LEFT_BRACE);
			setState(59);
			((WhileStatementContext)_localctx).body = statementSequence();
			setState(60);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BreakStatementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(AsteroidsProgramParser.BREAK, 0); }
		public BreakStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterBreakStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitBreakStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitBreakStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BreakStatementContext breakStatement() throws RecognitionException {
		BreakStatementContext _localctx = new BreakStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_breakStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(BREAK);
			setState(63);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ExpressionContext value;
		public TerminalNode RETURN() { return getToken(AsteroidsProgramParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(RETURN);
			setState(66);
			((ReturnStatementContext)_localctx).value = expression(0);
			setState(67);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ExpressionContext condition;
		public StatementSequenceContext ifbody;
		public StatementSequenceContext elsebody;
		public TerminalNode IF() { return getToken(AsteroidsProgramParser.IF, 0); }
		public List<TerminalNode> LEFT_BRACE() { return getTokens(AsteroidsProgramParser.LEFT_BRACE); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(AsteroidsProgramParser.LEFT_BRACE, i);
		}
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(AsteroidsProgramParser.RIGHT_BRACE); }
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(AsteroidsProgramParser.RIGHT_BRACE, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StatementSequenceContext> statementSequence() {
			return getRuleContexts(StatementSequenceContext.class);
		}
		public StatementSequenceContext statementSequence(int i) {
			return getRuleContext(StatementSequenceContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AsteroidsProgramParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(IF);
			setState(70);
			((IfStatementContext)_localctx).condition = expression(0);
			setState(71);
			match(LEFT_BRACE);
			setState(72);
			((IfStatementContext)_localctx).ifbody = statementSequence();
			setState(73);
			match(RIGHT_BRACE);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(74);
				match(ELSE);
				setState(75);
				match(LEFT_BRACE);
				setState(76);
				((IfStatementContext)_localctx).elsebody = statementSequence();
				setState(77);
				match(RIGHT_BRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public ExpressionContext value;
		public TerminalNode PRINT() { return getToken(AsteroidsProgramParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterPrintStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitPrintStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitPrintStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(PRINT);
			setState(82);
			((PrintStatementContext)_localctx).value = expression(0);
			setState(83);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementSequenceContext extends ParserRuleContext {
		public StatementContext statement;
		public List<StatementContext> stmts = new ArrayList<StatementContext>();
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).enterStatementSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsProgramListener ) ((AsteroidsProgramListener)listener).exitStatementSequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsteroidsProgramVisitor ) return ((AsteroidsProgramVisitor<? extends T>)visitor).visitStatementSequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementSequenceContext statementSequence() throws RecognitionException {
		StatementSequenceContext _localctx = new StatementSequenceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statementSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			((StatementSequenceContext)_localctx).statement = statement();
			((StatementSequenceContext)_localctx).stmts.add(((StatementSequenceContext)_localctx).statement);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << THRUSTON) | (1L << THRUSTOFF) | (1L << TURN) | (1L << FIRE) | (1L << SKIP_ACTION) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << RETURN) | (1L << PRINT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(86);
				((StatementSequenceContext)_localctx).statement = statement();
				((StatementSequenceContext)_localctx).stmts.add(((StatementSequenceContext)_localctx).statement);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
